--- a/propiedades.html
+++ b/propiedades.html
@@ -10,9 +10,12 @@
    	content="PROPIEDADES, VENTA, ALQUILER, TASACIONES, INMOBILIARIA, COAS, BOEDO, CABALLITO, FLORES">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
+	<div class="container-fluid">
 	<header>
 		<div class="row">
 			<div class="col-12">
@@ -59,7 +62,6 @@
 					<img src="img/twitter2.png" alt="pagina de twitter" width="40px" height="40px"></a>
 					</li>
 				</ul>
-			</nav>
 				  </div>
 				</nav>
 			</div>
@@ -152,40 +154,33 @@
         </div>
     </div>
 	<div>
-		<p class="ParrafoPrincipal"> <strong>Las ubicaciones de esta ficha son aproximadas, las exactas saldrán del correspondiente titulo de propiedad.</strong></p>
+		<p class="ParrafoPrincipal">Las ubicaciones de esta ficha son aproximadas, las exactas saldrán del correspondiente titulo de propiedad.</p>
 	</div>
 	<footer>
-		<div class="row">
-		<div class="col-12">
-		<section class="redessociales redessociales--1">
-			<a class="redessociales redessociales--1" href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
-				<img src="img/fb.png" alt="pagina de fb" width="70%" height="70%" class="redessociales__imagen">
-			</a>
-			<a class="redessociales redessociales--1" href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
-				<img src="img/insta.png" alt="pagina de instagram" width="70%" height="70%" class="redessociales__imagen">
-			</a>
-			<a class="redessociales redessociales--1" href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
-				<img src="img/pinterest.png" alt="pagina de pinterest" width="70%" height="70%" class="redessociales__imagen">
-			</a>
-			<a class="redessociales redessociales--1" href="https://twitter.com/home?lang=es" target="_blank">
-				<img src="img/twitter.png" alt="pagina de twitter" width="80%" height="80%" class="redessociales__imagen">
-			</a>
-		</section>
-		  </div>
-			</div>
 		<section>
 			<div class="row">
 				<div class="col-12">
-				<div class="card2 bg-dark text-white">
-				  <img src="img/skylinetira.png" class="card-img" alt="skylinetira" height="180vh">
-				  <div class="card-img-overlay">
-				  	<h5 class="card-title">COAS PROPIEDADES</h5>
-				    <p class="card-text">Dirección:  &nbsp;&nbsp;Av. San Juan 930</p>
-					<p class="card-text">Mail: &nbsp;&nbsp;coas_prop@hotmail.com</p>
-					<p class="card-text">Teléfono:&nbsp;&nbsp;49236959</p>
-					<p class="card-text">Whatsapp:&nbsp;&nbsp;1151654385</p></p>
-				    <p class="card-text2"><strong> Desde 1967 en el barrio de Boedo, brindando el mejor y más amplio asesoramiento profesional inmobiliario</strong></p>
-				  </div>
+					<div>
+					  <img src="img/skylinetira4.jpg" class="card-img" alt="skylinetira" height="180vh">
+					  	<div class="card-img-overlay">
+						  	<section class="redessoc2">
+								<a href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
+								<img src="img/fb3.png" alt="pagina de fb" width="40px" height="40px"></a>
+								<a href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
+								<img src="img/insta3.png" alt="pagina de instagram" width="40px" height="40px"></a>
+								<a  href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
+								<img src="img/pinterest3.png" alt="pagina de pinterest" width="40px" height="40px"></a>
+								<a  href="https://twitter.com/home?lang=es" target="_blank">
+								<img src="img/twitter3.png" alt="pagina de twitter" width="40px" height="40px"></a>
+							</section>
+							<h5 class="card-title">COAS PROPIEDADES</h5>
+						    <div><p class="card-text3"><img src="img/dire.png" alt="iconodire"> &nbsp;Av. San Juan 930</p></div>
+							<div><p class="card-text3"><img src="img/mail.png" alt="iconodire"> &nbsp;coas_prop@hotmail.com</p></div>
+							<div><p class="card-text3"><img src="img/wtpp.png" alt="iconodire"> &nbsp;49236959</p></div>
+							<div><p class="card-text3"><img src="img/tel.png" alt="iconodire"> &nbsp;1151654385</p></div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 			<div class="row">
@@ -196,5 +191,9 @@
 				</div>
 			</div>
 	</footer>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
